fixing image on iphone

--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,10 @@ h4 {
   padding: 0;
 }
 
+.profilepic{
+  height: auto;
+}
+
 @media all and (max-width: 912px) {
   .profileBox {
     display: flex;
